feat: restructure docs

--- a/zensical.toml
+++ b/zensical.toml
@@ -48,10 +48,14 @@ repo_name = "FriendsOfShopware/jetpack"
 # can be defined using TOML syntax.
 #
 # Read more: https://zensical.org/docs/setup/navigation/
-# nav = [
-#   { "Get started" = "index.md" },
-#   { "Markdown in 5min" = "markdown.md" },
-# ]
+ nav = [
+   { "Get started" = "index.md" },
+   { "Custom Module" = [
+       "custom-module/index.md",
+       "custom-module/detail-component.md",
+       "custom-module/listing-component.md",
+   ] },
+ ]
 
 # With the "extra_css" option you can add your own CSS styling to customize
 # your Zensical project according to your needs. You can add any number of
